2006-07-05  Jakub Steiner <jimmac@ximian.com>

	* scalable/emblems/Makefile.am: forgot to remove emblem-bin. bug
	#346580

2006-07-04  Jakub Steiner <jimmac@ximian.com>

	* appointment-soon, appointment-missed: tangoed
	* emblem-bin: removed
	
2006-07-03  Rodney Dawes  <dobey@novell.com>

	* configure.in: Add scalable/categories to output

	* scalable/Makefile.am: Add categories as a subdir

	* scalable/categories/Makefile.am:
	* scalable/categories/applications-internet.svg:
	Add a scalable applications-internet to the repo

	Fixes #164068

2006-06-30  Jakub Steiner <jimmac@ximian.com>

	* emblem-important, emblem-favorite: add properly sized emblem 
		to all sizes (16x16,22x22, 24x24, 32x32, scalable)
	* gnome-terminal.png: remove old filename
	
	
2006-06-29  Jakub Steiner <jimmac@ximian.com>

	* */apps/preferences-desktop-wallpaper.*: added a few
		details
	
2006-06-28  Rodney Dawes  <dobey@novell.com>

	* */apps/Makefile.am:
	* */apps/gnome-settings-background.*
	* */apps/wallpaper.*:

	Removed these old poorly named icons

	* */apps/Makefile.am:
	* */apps/preferences-desktop-wallpaper.*:

	Add this icon from Andreas Nilsson

	Fixes #313643

	* 22x22/categories/Makefile.am: Fix the size here so that icons are
	installing to the proper size directory in the theme
	
2006-06-28  Rodney Dawes  <dobey@novell.com>

	* 48x48/apps/Makefile.am:
	* 48x48/apps/xchat.png:
	Remove this icon, as it should be installed by xchat itself

	Fixes #153078

2006-06-28  Jakub Steiner <jimmac@ximian.com>

	* audio-volume*: volume bitmaps

2006-06-27  Jakub Steiner <jimmac@ximian.com>

	* {16x16,22x22}/apps/accessibility-directory.png,
	applets-screenshooter.png, boot.png, gnome-monitor.png,
	gnome-session.png: bitmap versions in tango style

2006-06-27  Rodney Dawes  <dobey@novell.com>

	* 48x48/actions/Makefile.am:
	* 48x48/actions/document-print-preview.png:
	Remove this icon, as there is a scalable version available

2006-05-15  Rodney Dawes  <dobey@novell.com>
